compile_server/temp/1690486841285_3.compile_error
./temp/1690486841285_3.cpp: In member function ‘bool Solution::isPalindrome(int)’:
./temp/1690486841285_3.cpp:12:1: error: ‘edwsf’ was not declared in this scope
 edwsf
 ^~~~~
./temp/1690486841285_3.cpp:15:5: warning: no return statement in function returning non-void [-Wreturn-type]
     }
     ^
